--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/sports_api?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=phil
+spring.datasource.password=password
+spring.sql.init.platform=mysql
+spring.jpa.hibernate.ddl-auto=none
