--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.username=phil
 spring.datasource.password=password
 spring.sql.init.platform=mysql
 spring.jpa.hibernate.ddl-auto=none
+spring.main.web-application-type=none
+
+logging.config=log4j2-spring.xml
