Add simple GET teams api route

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/sports_api?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/soccer_api?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=phil
 spring.datasource.password=password
 spring.sql.init.platform=mysql
 spring.jpa.hibernate.ddl-auto=none
-spring.main.web-application-type=none
 
 logging.config=log4j2-spring.xml
